--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,25 @@
 :root {
   --header-height: 4.5rem;
 
-  /* colors */
-  --hue: 159;
-  /* HSL color mode */
+  /* Colors */
   --base-color: #cb6ce6;
-  --base-color-second: #ffde59;
-  --white-color: #f5f5f5;
-  --body-color: #1b1b1b;
+  --second-color: #d37eeb;
+  --yellow-color: #ffde59;
+  --second-yellow-color: #ffe373;
+  --gray-color: #CCCCCC;
+  --white-color: #ffffff;
+  --body-color: #404040;
+  --text-black-color: #232323;
 
-  --title-font-size: 1.875rem;
-  --subtitle-font-size: 1rem;
-  --title-font: 'Poppins', sans-serif;
-  --body-font: 'DM Sans', sans-serif;
+  /*Fonts*/
+  --title-font-size: 3rem;
+  --subtitle-font-size: 2.25rem;
+  --text-font-size: 1.875rem;
+  --title-font: 'Roboto', sans-serif;
+  --text-font: 'Raleway', sans-serif;
+
+  /*Margins*/
+  --section-margin: 11.25 0;
 }
 
 /*ALL*/
@@ -24,6 +31,10 @@
 }
 
 /*TAGS*/
+
+h1,h2,h3,h4,h5,h6,h7,h8,p {
+  letter-spacing: 0.02em;
+}
 
 ul {
   list-style: none;
@@ -45,18 +56,38 @@ html {
 }
 
 body {
-  font: 400 1rem 'DM Sans', sans-serif;
+  font-family: var(--text-font);
+  font-size: var(--text-font-size);
+  font-weight: 500;
   color: var(--white-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
+  font-feature-settings: "lnum";
+}
+
+section {
+  max-width: 1510px;
 }
 
 /*ELEMENTS*/
+.toggle {
+  visibility: hidden;
+}
+
 
 .title {
   font: 700 1.875rem 'Poppins', sans-serif;
   color: var(--white-color);
   -webkit-font-smoothing: auto;
+}
+
+.section {
+  max-width: 1510px;
+  margin: 0 auto;
+}
+
+.margin-section {
+  margin:  170px auto;
 }
 
 .container {
@@ -68,8 +99,12 @@ body {
   gap: 2rem;
 }
 
+.container {
+  max-width: 1510px;
+}
+
 main {
-  margin-top: calc(var(--header-height) + 2rem);
+  margin-top: calc(var(--header-height) + 3rem);
 }
 
 /*Logo*/
@@ -77,32 +112,36 @@ main {
   width: 55px;
 }
 
-.logo span {
-  color: var(--base-color);
-}
-
-.logo-alt {
-  font: 700 1.31rem 'Poppins', sans-serif;
-  color: white;
-}
-
-.logo-alt span {
-  color: white;
-}
-
 /*MENU*/
-
-/*altura menu*/
 nav {
   height: var(--header-height);
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  
+}
+
+nav .menu ul {
+  display: flex;
+  gap: 2rem;
+}
+
+nav .menu ul li a.title {
+  font-size: 1.1125rem;
+  font-weight: 500;
+  -webkit-font-smoothing: antialiased;
+}
+
+nav .menu ul li a.title.active {
+  font-weight: 700;
+  color: var(--base-color);
+  -webkit-font-smoothing: auto;
 }
 
 nav ul li {
   text-align: center;
+  margin-left: 0.8rem;
 }
 
 nav ul li a {
@@ -115,7 +154,7 @@ nav ul li a.active {
   color: var(--base-color);
 }
 
-/*barrinha*/
+/*Bottom bar*/
 nav ul li a::after {
   content: '';
   width: 0%;
@@ -124,7 +163,7 @@ nav ul li a::after {
 
   position: absolute;
   left: 0;
-  bottom: -1.5rem;
+  bottom: -1rem;
 
   transition: width 0.3s;
 }
@@ -136,67 +175,352 @@ nav ul li a.active::after  {
   -webkit-font-smoothing: auto;
 }
 
-nav .menu {
-  opacity: 0;
-  visibility: hidden;
-  top: -20rem;
-  transition: 0.3s;
-}
-
-nav .menu ul {
-  display: none;
-}
-
-/*HOME*/
-
 #header {
-  border-bottom: 1px solid #161616;
-  margin-bottom: 2rem;
+  border-bottom: 1px solid #393939;
   display: flex;
   top: 0;
   left: 0;
   z-index: 100;
   background-color: var(--body-color);
   width: 100%;
+  position: fixed;
 }
-  /*PC*/
-  
-  @media (min-width: 1200px) {
-    
-    /*ELEMENTS*/
 
-    .container {
-      max-width: 1400px;
-    }
+/*Home*/
+.home {
+  display: flex;
+  align-items: center;
+}
 
-    /*MENU*/
-    
-    nav .menu {
-      opacity: 1;
-      visibility: visible;
-      top: 0;
-    }
+#home h1 {
+  font-size: var(--title-font-size);
+  font-family: var(--title-font);
+  font-weight: 700;
+  text-align: center;
+  width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 80px;
+  line-height: 70px;
+}
 
-    nav .menu ul {
-      display: flex;
-      gap: 2rem;
-    }
-    
-    nav .menu ul li a.title {
-      font: 400 1rem var(--body-font);
-      -webkit-font-smoothing: antialiased;
-    }
+#home h1 span {
+  background: var(--base-color);
+  padding: 1px 10px;
+}
 
-    nav .menu ul li a.title.active {
-      font-weight: bold;
-      color: var(--base-color);
-      -webkit-font-smoothing: auto;
-    }
+#home h3 {
+  font-size: var(--subtitle-font-size);
+  font-weight: 400;
+  width: 480px;
+  margin-bottom: 60px;
+  margin-top: 36px;
+}
 
-    }
+#home a {
+  display: block;
+  width: 340px;
+  margin: 0 auto;
+}
 
-    @media (max-width: 1200px) {
-      #header {
-        visibility: hidden;
-      }
-    }
+#home a .button {
+  text-align: center;
+  font-size: var(--subtitle-font-size);
+  font-family: var(--title-font);
+  font-weight: 500;
+  justify-content: center;
+  background: var(--base-color);
+  padding: 13px;
+  color: var(--white-color);
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+#home .button:hover {
+  background: var(--second-color);
+  transition: 0.3s ease;
+}
+
+.video iframe {
+  box-shadow: 36px 36px var(--text-black-color);
+  position: relative;
+  right: 7px;
+  margin-left: 255px;
+}
+
+#about .first h3 {
+  margin-bottom: 25px;
+  font-weight: 500;
+  font-size: 36px;
+}
+
+#about .list .item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  margin-left: 5px;
+}
+
+#about .list .item svg {
+  margin-right: 15px;
+}
+
+#about .first .list .item:hover {
+  opacity: 0.9;
+  transition: 0.3s ease;
+}
+
+#about .second .list .item:hover {
+  opacity: 0.9;
+  transition: 0.3s ease;
+}
+
+#about .second {
+  margin-top: 40px;
+}
+
+#about .second h3 span {
+  background: var(--yellow-color);
+  color: var(--text-black-color);
+  padding: 5px;
+}
+
+#about2 .btn {
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+#about2 .btn h2 {
+  margin: 0 auto;
+  width: 520px;
+  text-align: center;
+  background: var(--base-color);
+  padding: 10px 0px;
+  font-weight: 500;
+  font-family: var(--title-font);
+  margin-bottom: 60px;
+  cursor: default;
+}
+
+#about2 .containers {
+  display: flex;
+}
+
+#about2 .containers .container-2 {
+  margin-left: 200px
+}
+
+#about2 .containers .text h3 {
+  font-size: var(--subtitle-font-size);
+  font-weight: 600;
+  background: var(--base-color);
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  cursor: default;
+}
+
+#about2 .containers .text h3:hover {
+  opacity: 0.9;
+  transition: 0.3s ease;
+}
+
+#about2 .containers .text .carta h3 {
+  margin-top: 95px;
+}
+
+#about2 .containers .text .contrato h3 {
+  margin-top: 60px;
+}
+
+#bonus {
+  max-width: 1050px;
+}
+
+#bonus .title {
+  background: var(--yellow-color);
+  color: var(--text-black-color);
+  font-family: var(--title-font);
+  border-radius: 20px 20px 0 0;
+  text-align: center;
+  padding: 15px 0;
+}
+
+#bonus .title h3 {
+  font-size: var(--subtitle-font-size);
+  font-weight: 700;
+}
+
+#bonus .title p {
+  margin-top: 5px;
+  font-weight: 400;
+}
+
+#bonus .list {
+  background: var(--base-color);
+  border-radius: 0 0 20px 20px;
+  padding: 25px;
+}
+
+#bonus .list .itens {
+  display: flex;
+  margin-bottom: 25px;
+  width: 950px;
+}
+
+#bonus .list .itens svg {
+  margin-right: 30px;
+  margin-top: 10px;
+}
+
+#bonus .description {
+  text-align: center;
+  width: 900px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+#resume {
+  max-width: 1050px;
+}
+
+#resume h3 {
+  text-align: center;
+  font-size: var(--subtitle-font-size);
+  font-family: var(--title-font);
+  font-weight: 500;
+  background: var(--base-color);
+  border-radius: 20px 20px 0 0;
+  padding: 15px 0;
+}
+
+#resume .list {
+  background: rgba(255, 255, 255, 0.05);
+  border: 4px dashed var(--base-color);
+  padding: 25px;
+  margin-top: -4px;
+  border-radius: 0 0 20px 20px;
+}
+
+#resume .list .itens {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+#resume .list .itens svg {
+  margin-right: 10px;
+}
+
+#resume .list .itens svg:hover {
+  height: 22px;
+  width: 22px;
+  transition: 0.3s ease;
+}
+
+#resume .list .itens .names {
+  display: flex;
+  align-items: center;
+}
+
+#resume .list .itens .names .price {
+  margin-left: 20px;
+  color: #FF5959;
+  text-decoration: line-through;
+}
+
+#resume .list .last {
+  margin-bottom: 0;
+}
+
+#resume h4 {
+  color: #FF5959;
+  text-align: center;
+  font-size: 55px;
+  margin-top: 50px;
+}
+
+#resume h4 span {
+  text-decoration: line-through;
+}
+
+#resume .real-price {
+  text-align: center;
+  margin-top: 50px;
+  font-family: var(--title-font-size);
+  overflow: hidden;
+}
+
+#resume .real-price h2 {
+  font-size: 68px;
+  font-weight: 700;
+  position: relative;
+  right: 130px;
+}
+
+#resume .real-price .price {
+  font-size: var(--title-font-size);
+  position: relative;
+  left: 130px;
+}
+
+#resume .real-price .button {
+  width: 480px;
+  margin: 0 auto;
+  margin-top: 50px;
+  background: var(--yellow-color);
+  font-size: var(--title-font-size);
+  font-family: var(--title-font);
+  font-weight: 500;
+  padding: 13px;
+  color: var(--text-black-color);
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+#resume .real-price .button:hover {
+  background: var(--second-yellow-color);
+  transition: 0.3s ease;
+}
+
+#garantia {
+  display: flex;
+  align-items: center;
+}
+
+#garantia p {
+  font-size: var(--subtitle-font-size);
+}
+
+#garantia img {
+  width: 367px;
+  height: 330;
+  margin-left: 470px;
+}
+
+#aviso p {
+  color: var(--gray-color);
+}
+
+footer {
+  padding: 20px 0;
+  align-items: center;
+  border-top: 1px solid #393939;
+}
+
+footer p {
+  text-align: center;
+  font-size: 20px;
+  font-family: var(--title-font);
+  font-weight: 400;
+  color: var(--gray-color);
+}
+
+@media screen and (max-width:1540px) {
+
+  body {
+    background: red;
+  }
+
+}
