--- a/css/responsive.css
+++ b/css/responsive.css
@@ -223,6 +223,7 @@
 
   #home h1 {
     margin-bottom: 15px;
+    width: 100%;
   }
 
   #home .video iframe {
@@ -233,11 +234,12 @@
   }
 
   #home .video .button1500 {
-    width: 180px;
+    width: 230px;
     margin: 0 auto;
     margin-top: 50px;
     padding: 10px;
     border-radius: 8px;
+    font-size: var(--title-font-size);
   }
 
   #about .list .item svg {
@@ -259,6 +261,10 @@
 
   #about2 .containers {
     margin-top: -25px;
+  }
+
+  #bonus {
+    margin-top: 5rem;
   }
 
   #bonus .list {
