--- a/css/index.css
+++ b/css/index.css
@@ -244,6 +244,10 @@ nav ul li a.active::after  {
   margin-left: 255px;
 }
 
+#about {
+  max-width: 1050px;
+}
+
 #about .first h3 {
   margin-bottom: 25px;
   font-weight: 500;
@@ -254,7 +258,6 @@ nav ul li a.active::after  {
   display: flex;
   align-items: center;
   margin-bottom: 15px;
-  margin-left: 5px;
 }
 
 #about .list .item svg {
@@ -454,7 +457,7 @@ nav ul li a.active::after  {
   padding: 13px;
   color: var(--text-black-color);
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 12.5px;
 }
 
 .resume .real-price .button:hover {
