--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,21 @@
-@media screen and (max-width:1540px) {
+@media screen and (max-width: 1540px){
+  .container {
+    max-width: 1300px;
+  }
+
+  main {
+    max-width: 1300px;
+  }
+}
+
+@media screen and (max-width:1300px) {
   :root {
     --section-margin: 7.5rem 1.25rem;
   }
 
   main {
     margin: 0 auto;
-    max-width: 1400px;
+    max-width: 1540px;
   }
 
   #header {
